# base_inertial_parameters

./: .gitignore  README.md  convertbag.sh  environment.yaml  pyproject.toml  robot_parameters.yaml
config/thunder/: ahand_index_conf.yaml  ahand_middle_conf.yaml  ahand_ring_conf.yaml  ahand_thumb_conf.yaml  franka_conf.yaml  leo_franka_conf.yaml  leo_franka_par.yaml
docker/: .dockerignore  DOCKER.md  Dockerfile
results/ahand_identification/finger/: identification_par.yaml
results/ahand_identification/thumb/: identification_par.yaml
results/data_24_02_2026/franka/: franka_config.yaml
results/data_24_02_2026/franka_softhand/: identification_par.yaml
results/data_24_02_2026/franka_softhand_lissajou/: franka_softhand_config.yaml  identification_par.yaml
results/data_24_02_2026/franka_std_0/: franka_config.yaml  identification_par.yaml
results/data_24_02_2026/franka_std_01/: franka_config.yaml  identification_par.yaml
results/data_25_02_2026/franka_std_01/: franka_config.yaml  identification_par.yaml
src/: franka_identification.py  franka_softhand_identification.py  init.sh  main copy.py  main.py  thunder_base_inertial_parameters_estim.py
src/config/: ahand_config.yaml  ahand_finger_config.yaml  ahand_thumb_config.yaml  franka_softhand_config.yaml
src/data/franka/: q_identification.csv  (+1 more)
src/examples/: README.md
src/templates/: config_template.yaml  main.py  prior_template.yaml
src/utils/: Identifier.py  casadi_utils.py  evaluation_utils.py  generate_trajectory_utils.py  identification_utils.py  import_thunder.py  loader_utils.py  ros2_utils.py
(+80 files in other folders)
