[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="dynamic_parameter_identification"
version="0.1.0"
description="Dynamic Parameters Identification Package"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pyyaml",
    "casadi"
]